<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <Button
            android:id="@+id/MoreDetailsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MoreDetails"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/ViewMapBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ViewMap"
            android:layout_toRightOf="@id/MoreDetailsBtn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"/>

        <ImageView
            android:id="@+id/fbIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fb_icon"
            android:layout_toRightOf="@id/ViewMapBtn"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_alignBottom="@+id/ViewMapBtn"
            android:layout_alignTop="@+id/ViewMapBtn"/>


        <ImageView
            android:id="@+id/WeatherImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/fb_icon"
            android:layout_below="@id/ViewMapBtn"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/WeatherDetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Weather Temp to display"
            android:layout_below="@id/WeatherImage"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/TempDetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0F"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_below="@id/WeatherDetails"
            android:textSize="35sp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/LowHighTempDetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="L:0|H:0"
            android:textAlignment="center"
            android:layout_below="@id/TempDetails"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/PrecipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Precip"
            android:textSize="20sp"
            android:layout_below="@id/LowHighTempDetails"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/PrecipVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="None"
            android:textSize="20sp"
            android:layout_below="@id/LowHighTempDetails"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"/>
        <TextView
            android:id="@+id/ChanceOfRainLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChanceOfRain"
            android:textSize="20sp"
            android:layout_below="@id/PrecipLabel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/ChanceOfRainValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:textSize="20sp"
            android:layout_below="@id/PrecipVal"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/WindSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WindSpeed"
            android:textSize="20sp"
            android:layout_below="@id/ChanceOfRainLabel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/WindSpeedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.23mph"
            android:textSize="20sp"
            android:layout_below="@id/ChanceOfRainValue"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/DewPointLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DewPoint"
            android:textSize="20sp"
            android:layout_below="@id/WindSpeedLabel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/DewPointVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="31degreeF"
            android:textSize="20sp"
            android:layout_below="@id/WindSpeedValue"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/HumidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Humidity"
            android:textSize="20sp"
            android:layout_below="@id/DewPointLabel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/HumidityVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25%"
            android:textSize="20sp"
            android:layout_below="@id/DewPointVal"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/VisibilityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Visibility"
            android:textSize="20sp"
            android:layout_below="@id/HumidityLabel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/VisibilityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10.00mi"
            android:textSize="20sp"
            android:layout_below="@id/HumidityVal"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/SunriseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunrise"
            android:textSize="20sp"
            android:layout_below="@id/VisibilityLabel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/SunriseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="06:00AM"
            android:textSize="20sp"
            android:layout_below="@id/VisibilityValue"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/SunsetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunrise"
            android:textSize="20sp"
            android:layout_below="@id/SunriseLabel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/SunsetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="07:00PM"
            android:textSize="20sp"
            android:layout_below="@id/SunriseLabel"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
</ScrollView>

